chore: config fixes

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "@liberedu/functional",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist",
   "scripts": {
+    "build": "yarn tsc",
     "preconfigure": "node ./bin/pre-configure.js",
     "preinstall": "yarn preconfigure",
     "prepublish": "yarn build && yarn preconfigure",
@@ -12,7 +15,7 @@
     "test:ci": "yarn test --coverage",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "echo tslint -p tsconfig.json",
-    "prepublishOnly": "npm run test:deploy && npm run lint",
+    "prepublishOnly": "npm run test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
