--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,11 @@
 		"outDir": "./dist",
 		"resolveJsonModule": true,
 		"allowSyntheticDefaultImports": true,
+		"skipLibCheck": true,
 		"strict": true,
 		"baseUrl": "./src",
 		"rootDir": "./src",
 		"paths": {}
 	},
-	"exclude": ["__tests__"]
+	"exclude": ["__tests__", "jest.config.ts"]
 }
