--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
 		"rootDir": "./src",
 		"paths": {}
 	},
-	"exclude": ["__tests__", "jest.config.ts"]
+	"exclude": ["__tests__", "jest.config.ts", "dist"]
 }
