--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
 	"compilerOptions": {
 		"declaration": true,
-		"module": "commonjs",
+		"module": "es6",
 		"esModuleInterop": true,
-		"target": "es6",
+		"target": "ES5",
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"outDir": "./dist",
