--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"declaration": true,
-		"module": "es6",
+		"module": "CommonJS",
 		"esModuleInterop": true,
 		"target": "ES5",
 		"moduleResolution": "node",
