--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@liberedu/functional",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -9,13 +9,12 @@
     "build": "yarn tsc",
     "preconfigure": "node ./bin/pre-configure.js",
     "preinstall": "yarn preconfigure",
-    "prepublish": "yarn build && yarn preconfigure",
     "prebuild": "rm -rf ./dist",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:ci": "yarn test --coverage",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "echo tslint -p tsconfig.json",
-    "prepublishOnly": "npm run test && npm run lint",
+    "prepublishOnly": "yarn build && yarn preconfigure && npm run test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
@@ -37,6 +36,7 @@
     "jest": "^27.0.6",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
+    "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
